--- a/src/FitCal.Application/FitCal.Application.csproj
+++ b/src/FitCal.Application/FitCal.Application.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="MappingConfigurations\" />
+    <Folder Include="Services\" />
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
