--- a/src/FitCal.Application/FitCal.Application.csproj
+++ b/src/FitCal.Application/FitCal.Application.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Folder Include="Data\DTO\Request\" />
+    <Folder Include="Data\DTO\Response\" />
     <Folder Include="MappingConfigurations\" />
     <Folder Include="Services\" />
     <Folder Include="Utils\" />
