--- a/src/FitCal.Application/FitCal.Application.csproj
+++ b/src/FitCal.Application/FitCal.Application.csproj
@@ -10,4 +10,8 @@
     <Folder Include="MappingConfigurations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FitCal.Persistence\FitCal.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
