--- a/src/FitCal.WebAPI/appsettings.json
+++ b/src/FitCal.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "FitCalDatabase": "Server=localhost;Database=FitCalDb;User Id=postgres2;Password=1234567;"
+    }
 }
